# ungoogled-chromium-portablelinux

./: docker-build.sh  flags.portable.gn
patches/: series
patches/ungoogled-chromium/: gtk_input.patch
